# earthlib

./: .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: run-pytest.yml
docs/: index.md
docs/module/: BurnPVSoil.md  config.md  endmembers.md  metadata.md  sensors.md
earthlib/: BRDFCorrect.py  BurnPVSoil.py  SoilPVNPV.py  VegImperviousSoil.py  __init__.py  config.py  endmembers.py  metadata.py  read.py  sensors.py  utils.py
earthlib/data/: collections.json  spectra.csv
earthlib/geelib/: BRDFCorrect.py  BurnPVSoil.py  NIRv.py  Scale.py  SoilPVNPV.py  Unmix.py  VegImperviousSoil.py  config.py  utils.py
introduction/: index.html
module/BRDFCorrect/: index.html
module/BrightMask/: index.html
module/BurnPVSoil/: index.html
module/CloudMask/: index.html
module/NIRv/: index.html
module/Scale/: index.html
module/ShadeMask/: index.html
module/SoilPVNPV/: SoilPVNPV.md  index.html
module/Unmix/: index.html
module/VegImperviousSoil/: VegImperviousSoil.md  index.html
module/config/: index.html
module/errors/: errors.md  index.html
module/read/: index.html
module/utils/: index.html
scripts/: create-collections.py
search/: search_index.json
sources/: index.html  sources.md
test/: test_endmembers.py  test_metadata.py  test_read.py  test_sensors.py  test_utils.py
