[tool.poetry]
name = "earthlib"
version = "0.4.0"
description = "A global spectral library with earth engine tools for satellite land cover mapping."
authors = ["earth-chris <cbanders@alumni.stanford.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.21"
pandas = ">=1.3"
spectral = ">=0.22"
tqdm = ">=4.63"

[tool.poetry.extras]
ee = ["earthengine-api"]

[tool.poetry.group.dev.dependencies]
ipython = "^8.5"
jupyter = "^1.0"
geemap = "^0.26"
pre-commit = "^3.4"
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-xdist = "^3.3"
twine = "^4.0"
mkdocs-material = ">=9.5"
mkdocstrings = {extras = ["python"], version = ">=0.25"}
mkdocs-jupyter = ">=0.24"
livereload = "^2.6"

[tool.coverage.run]
omit = ["earthlib/__init__.py", "earthlib/config.py", "earthlib/errors.py", "earthlib/geelib/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
